tests/testcases/valid/types/13_incomplete_pointer_class_member.ciel
// Test: Pointer to incomplete type as class member
// Expected: No error - pointers to incomplete types are allowed

struct ForwardDeclaredStruct;

class Container {
    private:
        struct ForwardDeclaredStruct* data_ptr;
    public:
        struct ForwardDeclaredStruct* getDataPtr();
};
