tests/testcases/invalid/semantic/46_incomplete_union_member.ciel
// Test: Incomplete type used as union member
// Expected: Error - incomplete type cannot be used as union member

struct ForwardDeclaredStruct;

union Container {
    struct ForwardDeclaredStruct member;
    int alternative;
};

int main(){
    return 0;
}
